<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_view_pager"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/crime_view_pager"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toTopOf="@id/constraintLayoutButtons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:focusableInTouchMode="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/crime_view_pager">

            <Button
                android:id="@+id/crime_jump_first_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jump_first_button"
                app:layout_constraintEnd_toStartOf="@id/crime_edit_text_page"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/crime_edit_text_page"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/crime_pager_page"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/crime_jump_last_button"
                app:layout_constraintStart_toEndOf="@id/crime_jump_first_button"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/crime_jump_last_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jump_last_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/crime_edit_text_page"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>